fix: add custom style functionality in paddedWrapper component and fix header not visible problem

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 
 .page {
   height: 100%;
+  margin-top: 1rem;
 }
 
 .btn {
